generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Usuario {
  id          String      @id @default(uuid())
  username    String      @unique
  nombre      String      @db.VarChar(100)
  email       String      @unique
  estado      String      @default("Activo")
  solicitudes Solicitud[]
  centros     Centro[]    @relation("UsuarioCentros")
  roles       Rol[]       @relation("UsuarioRoles")
}

model Rol {
  id       String    @id
  nombre   String    @db.VarChar(50)
  usuarios Usuario[] @relation("UsuarioRoles")
}

model Centro {
  id          String      @id
  nombre      String      @db.VarChar(100)
  almacenes   Almacen[]
  solicitudes Solicitud[]
  usuarios    Usuario[]   @relation("UsuarioCentros")
}

model Almacen {
  id          String      @id
  nombre      String      @db.VarChar(100)
  centroId    String
  centro      Centro      @relation(fields: [centroId], references: [id])
  solicitudes Solicitud[]
}

model Material {
  id          String      @id
  nombre      String      @db.VarChar(100)
  descripcion String?     @db.VarChar(255)
  solicitudes Solicitud[]
}

model Servicio {
  id          String      @id
  nombre      String      @db.VarChar(100)
  descripcion String?     @db.VarChar(255)
  solicitudes Solicitud[]
}

model UnidadMedida {
  id          String      @id @db.VarChar(3)
  nombre      String      @db.VarChar(50)
  solicitudes Solicitud[]
}

model Solicitud {
  id             String       @id
  tipo           String       @db.VarChar(10)
  descripcion    String       @db.VarChar(40)
  cantidad       Decimal      @db.Decimal(13, 3)
  fechaCreacion  DateTime     @default(now())
  fechaEntrega   DateTime
  estado         String       @default("Creada")
  usuarioId      String
  centroId       String
  almacenId      String?
  materialId     String?
  servicioId     String?
  unidadMedidaId String       @db.VarChar(3)
  almacen        Almacen?     @relation(fields: [almacenId], references: [id])
  centro         Centro       @relation(fields: [centroId], references: [id])
  material       Material?    @relation(fields: [materialId], references: [id])
  servicio       Servicio?    @relation(fields: [servicioId], references: [id])
  unidadMedida   UnidadMedida @relation(fields: [unidadMedidaId], references: [id])
  usuario        Usuario      @relation(fields: [usuarioId], references: [id])

  @@unique([materialId, centroId, fechaEntrega], name: "unique_material_request")
  @@unique([servicioId, centroId, fechaEntrega], name: "unique_service_request")
}
